<resources>
    <string name="app_name">BookInventoryApp</string>

    <!-- MainActivity top menu strings -->
    <string name="provideData">Add fake data</string>
    <string name="deleteAllMessage">Delete all</string>

    <!-- EditActivity top menu strings -->
    <string name="saveMessage">Save</string>
    <string name="itemDeleteMessage">Delete item</string>

    <!-- Top menu strings-->
    <string name="example_text">editText</string>

    <!-- Edit activity hint strings-->
    <string name="bookQuantity">Quantity</string>
    <string name="bookPrice">Price</string>
    <string name="bookTitle">Book Title</string>
    <string name="supplierName">Supplier name</string>
    <string name="supplierPhoneNumber">Supplier phone no</string>

    <!-- Toast strings-->
    <string name="savingErrorToast">Error with saving book.</string>
    <string name="successfulSavingToast">Book saved with row id:</string>

    <!-- Sample dummy data -->
    <string name="dummyTitle">Sample book title</string>
    <string name="dummyQuantity">11</string>
    <string name="dummyPrice">50</string>
    <string name="dummySupplier">The Monsters Inc</string>
    <string name="dummyPhoneNumber">+01 666 999 666</string>

    <!-- No data messages -->
    <string name="emptyViewText">Nothing to see here yet…</string>
    <string name="emptyViewHintText">To start add a book</string>

    <!-- Actions buttons strings -->
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Do you really want delete?</string>
    <string name="delete">Delete Item</string>
    <string name="cancel">Cancel</string>
    <string name="call_to_supplier">Call Supplier</string>
    <string name="sale">Sale</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="button_decrease_text">-</string>
    <string name="button_increase_text">+</string>
    <string name="default_quantity_of_books">0</string>

    <!-- Edit Activity strings -->
    <string name="editor_activity_new_book">Add a book</string>
    <string name="editor_insert_book_success">Book saved successfully</string>
    <string name="editor_insert_book_failed">Error while saving book</string>
    <string name="editor_activity_title_edit_book">Edit a book</string>
    <string name="editor_update_book_failed">Update a book</string>
    <string name="editor_update_book_successful">Update successful</string>
    <string name="editor_delete_book_failed">Delete unsuccessful</string>
    <string name="editor_delete_book_successful">Delete successful</string>
    <string name="quantity_check">Quantity cannot be less than 0</string>

    <!-- Error messages Toasts -->
    <string name="editor_error_update">Error while updating</string>
    <string name="editor_quantity_error">You must input quantity</string>
    <string name="editor_title_error">Book has to have a title!</string>
    <string name="editor_price_error">Book has to have price</string>
    <string name="editor_supplier_name_error">Supplier name has to be given</string>
    <string name="editor_supplier_phone_error">Supplier phone number has to be given</string>
    <string name="editor_unsaved_changes_dialog">There are changes that are not saved yet. Are you sure you want to quit?</string>

</resources>
